--- a/The_Book_of_Sands/style.css
+++ b/The_Book_of_Sands/style.css
@@ -261,7 +261,7 @@ a:active{ transform: scale(0.98); }
     font-size: 38px;         
     line-height: 1.1;
     letter-spacing: 0.2px;
-    text-align: left;        
+    text-align: center;        
   }
 
   .subtitle{
